fix click bounds problem caused by invisible large div

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -214,7 +214,7 @@ h1, h2, h3, h4, h5
 #headerPageTitle {
   display: inline-block;
   position: fixed;
-  height:100%;
+  height: 30px;
   left: 30ch;
   z-index: 5;
   color: #ffffff;
